--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 
     <meta property="og:title" content="881604f7-285e-44ad-a0f3-ec3d3b971625" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:description" content="Juspredict Generated Project" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/src/assets/logo.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <!-- <meta name="twitter:site" content="@lovable_dev" /> -->
+    <meta name="twitter:image" content="/src/assets/logo.png" />
   </head>
 
   <body>
